# war25

./: README.md
doc/: 0 Various Links.txt  Tileset_comparision.ods
src/: CMakeLists.txt  Direction.cpp  Direction.h  Game.cpp  Game.h  Player.cpp  Player.h  PlayerColor.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Types.h  main.cpp
src/Buildings/: Barracks.cpp  Barracks.h  Blacksmith.cpp  Blacksmith.h  Building.cpp  Building.h  CMakeLists.txt  Church.cpp  Church.h  DarkPortal.cpp  DarkPortal.h  Farm.cpp  Farm.h  Foundry.cpp  Foundry.h  GnomishInventor.cpp  GnomishInventor.h  Goldmine.cpp  Goldmine.h  GryphonAviary.cpp  GryphonAviary.h  LumberMill.cpp  LumberMill.h  MageTower.cpp  MageTower.h  OilRefinery.cpp  OilRefinery.h  OilRig.cpp  OilRig.h  ScoutTower.cpp  ScoutTower.h  Shipyard.cpp  Shipyard.h  Stables.cpp  Stables.h  Townhall.cpp  Townhall.h
src/EventHandling/: BuildingEventProcessor.cpp  BuildingEventProcessor.h  CMakeLists.txt  Event.cpp  Event.h  EventBroker.cpp  EventBroker.h  EventHandlerID.h  EventProcessor.cpp  EventProcessor.h  State.cpp  State.h  StateCondition.h  StateDead.cpp  StateDead.h  StateIdle.cpp  StateIdle.h  StateMachine.cpp  StateMachine.h  StateMoving.cpp  StateMoving.h  StatePatrol.cpp  StatePatrol.h
src/GUI/: CMakeLists.txt  DebugSpellWindow.cpp  DebugSpellWindow.h  DebugWindow.cpp  DebugWindow.h  HelperFunctions.cpp  HelperFunctions.h  MenuBarWindow.cpp  MenuBarWindow.h  MiniMap.cpp  MiniMap.h  Mouse.cpp  Mouse.h  MusicPlayer.cpp  MusicPlayer.h  ObjectInfoWindow.cpp  ObjectInfoWindow.h  PUDBrowser.cpp  PUDBrowser.h  PlayerStatsWindow.cpp  PlayerStatsWindow.h  Window.cpp  Window.h
src/GUI/imgui/gl3w/GL/: gl3w.h
src/Global/: Action.cpp  Action.h  CMakeLists.txt  DebugManager.cpp  DebugManager.h  Fractions.h  GlobalAttributes.cpp  GlobalAttributes.h  Object.cpp  Object.h  ProductionItem.cpp  ProductionItem.h  PseudoRandom.cpp  PseudoRandom.h  Resources.cpp  Resources.h  TechnologyManager.cpp  TechnologyManager.h  Upgrade.h  UpgradeEffect.cpp  UpgradeEffect.h  Viewport.cpp  Viewport.h
src/Magic/: Buff.cpp  Buff.h  CMakeLists.txt  IMagical.cpp  IMagical.h  Runes.cpp  Runes.h  SpellExecutor.cpp  SpellExecutor.h
src/Map/: AStar.cpp  AStar.h  CMakeLists.txt  INode.h  Map.cpp  Map.h  MapInfo.cpp  MapInfo.h  MapObject.h  Path.cpp  Path.h  Tile.cpp  Tile.h
src/Resources/: Animation.cpp  Animation.h  CMakeLists.txt  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  resourcemanager_wartools.cpp  resourcemanager_wartools.h
src/Units/: AttackerStats.h  CMakeLists.txt  Critter.cpp  Critter.h  IArmed.cpp  IArmed.h  Projectile.cpp  Projectile.h  Unit.cpp  Unit.h  UnitActions.h
src/Units/AirUnits/: CMakeLists.txt  GnomishFlyingMachine.cpp  GnomishFlyingMachine.h  GryphonRider.cpp  GryphonRider.h
src/Units/LandUnits/: Archer.cpp  Archer.h  Ballista.cpp  Ballista.h  CMakeLists.txt  Footman.cpp  Footman.h  Knight.cpp  Knight.h  Mage.cpp  Mage.h  Skeleton.cpp  Skeleton.h
src/Units/LandUnits/Dwarfes/: CMakeLists.txt  Dwarfes.cpp  Dwarfes.h  StateExplode.cpp  StateExplode.h
src/Units/LandUnits/Peasant/: CMakeLists.txt  Peasant.cpp  Peasant.h
src/Units/LandUnits/Peasant/CompositeStateChopWood/: CMakeLists.txt  CompositeStateChopWood.cpp  CompositeStateChopWood.h  StateChopWood.cpp  StateChopWood.h  StateMoveToWood.cpp  StateMoveToWood.h
src/Units/LandUnits/Peasant/CompositeStateConstructBuilding/: CMakeLists.txt  CompositeStateConstructBuilding.cpp  CompositeStateConstructBuilding.h
src/Units/LandUnits/Peasant/CompositeStateMining/: CMakeLists.txt  CompositeStateMining.cpp  CompositeStateMining.h  StateCollectGold.cpp  StateCollectGold.h  StateEnterBuildingForDelivery.cpp  StateEnterBuildingForDelivery.h  StateMoveToGoldmine.cpp  StateMoveToGoldmine.h  StateReturningResource.cpp  StateReturningResource.h
src/Units/Resource/: CMakeLists.txt  IResourceAcceptor.cpp  IResourceAcceptor.h  IResourceCollector.h  IResourceMine.cpp  IResourceMine.h  ResourceType.h
src/Units/SeaUnits/: Battleship.cpp  Battleship.h  CMakeLists.txt  Destroyer.cpp  Destroyer.h  GnomishSubmarine.cpp  GnomishSubmarine.h  Tanker.cpp  Tanker.h  Transport.cpp  Transport.h
